Time: 7 ms (97.78%), Space: 56.9 MB (68.17%) - LeetHub